--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p></p>
 
 			<div class="row">
-				<div class="card col-6-md bg-dark">
+				<div class="card col-6-md bg-grey">
 					<header>
 						<h4>Card title</h4>
 					</header>
@@ -55,8 +55,13 @@
 					</header>
 					<p>Time: <span id="time"></span></p>
 					<p>Meta: <span id="meta"></span></p>
+					<p>Bytes: [<span id="bytes"></span>]</p>
 				</div>
 			</div>
+
+			<h2>Specifications</h2>
+
+			REPLACE_ME
 		</div>
 
 		<script>
@@ -71,8 +76,6 @@
 					? ((el.innerHTML = "☀️"), bodyClass.remove("dark"))
 					: ((el.innerHTML = "🌙"), bodyClass.add("dark"));
 			}
-
-			var exports = {};
 		</script>
 
 		<script type="module">
@@ -81,6 +84,7 @@
 			function update() {
 				time.innerText = y.time();
 				meta.innerText = y.meta();
+				bytes.innerText = y.bytes;
 			}
 
 			const y = New();
