--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</script>
 
 		<script type="module">
-			import { YAID, New, Parse } from "http://localhost:8000/yaid-ts/dist/yaid.js";
+			import { YAID, New, Parse } from "http://localhost:8000/yaid-ts/yaid.js";
 
 			function update() {
 				time.innerText = y.time();
