Create python documentation

--- a/site/template.html
+++ b/site/template.html
@@ -22,12 +22,12 @@
 				</ul>
 				<ul>
 					<li>
-						<a href="https://github.com/hnz/yaid/yaid-ts">
+						<a href="yaid-ts.html">
 							<img src="logo-js.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/hnz/yaid/yaid-py">
+						<a href="yaid-py.html">
 							<img src="logo-py.svg" width="30" height="30" />
 						</a>
 					</li>
