Switch back to build.js

--- a/site/template.html
+++ b/site/template.html
@@ -2,11 +2,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="{{description}}" />
 		<title>{{title}}</title>
 		<link
 			rel="icon"
 			href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🆔</text></svg>"
 		/>
+		<link rel="stylesheet" href="highlight-light.css" />
 		<link rel="stylesheet" href="pico.min.css" />
 		<script type="module" src="darkmode.js"></script>
 	</head>
