Renamed yaid-ts to yaid-js

--- a/site/template.html
+++ b/site/template.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" data-theme="">
 	<head>
 		<meta charset="utf-8" />
@@ -23,25 +24,23 @@
 				</ul>
 				<ul>
 					<li>
-						<a href="yaid-ts.html">
-							<img src="logo-js.svg" width="30" height="30" />
+						<a href="yaid-js.html">
+							<img alt="yaid-js" src="logo-js.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
 						<a href="yaid-py.html">
-							<img src="logo-py.svg" width="30" height="30" />
+							<img alt="yaid-py" src="logo-py.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
 						<a href="https://github.com/hnz/yaid/yaid-go">
-							<img src="logo-go.svg" width="30" height="30" />
+							<img alt="yaid-go" src="logo-go.svg" width="30" height="30" />
 						</a>
 					</li>
 				</ul>
 			</nav>
-
 			{{main}}
-
 			<footer>
 				<br /><br />
 				<hr />
