Added README to yaid-go

--- a/site/template.html
+++ b/site/template.html
@@ -24,18 +24,18 @@
 				</ul>
 				<ul>
 					<li>
-						<a href="yaid-js.html">
-							<img alt="yaid-js" src="logo-js.svg" width="30" height="30" />
+						<a href="yaid-js.html" title="Go SDK">
+							<img alt="Javscript SDK" src="logo-js.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="yaid-py.html">
-							<img alt="yaid-py" src="logo-py.svg" width="30" height="30" />
+						<a href="yaid-py.html" title="Go SDK">
+							<img alt="Python SDK" src="logo-py.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/hnz/yaid/yaid-go">
-							<img alt="yaid-go" src="logo-go.svg" width="30" height="30" />
+						<a href="yaid-go.html" title="Go SDK">
+							<img alt="Go SDK" src="logo-go.svg" width="30" height="30" />
 						</a>
 					</li>
 				</ul>
