Added gitref to site

--- a/site/template.html
+++ b/site/template.html
@@ -44,7 +44,7 @@
 			<footer>
 				<br /><br />
 				<hr />
-				<small><i>© 2023 Hans van Leeuwen</i></small>
+				<small><i>© 2023 Hans van Leeuwen {{gitrev}}</i></small>
 				<div style="float: right">
 					🌞 <input type="checkbox" role="switch" id="toggleSwitch" /> 🌚
 				</div>
