--- a/site/template.html
+++ b/site/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" data-theme="">
 	<head>
 		<meta charset="utf-8" />
@@ -24,17 +24,17 @@
 				</ul>
 				<ul>
 					<li>
-						<a href="yaid-js.html" title="Go SDK">
+						<a href="./yaid-js" title="Javascript SDK">
 							<img alt="Javscript SDK" src="logo-js.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="yaid-py.html" title="Go SDK">
+						<a href="./yaid-py" title="Python SDK">
 							<img alt="Python SDK" src="logo-py.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="yaid-go.html" title="Go SDK">
+						<a href="./yaid-go" title="Go SDK">
 							<img alt="Go SDK" src="logo-go.svg" width="30" height="30" />
 						</a>
 					</li>
