deploy: 6de93b4708b4892fcfbce6b81192cfc4e8c0af28

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" data-theme="">
 	<head>
 		<meta charset="utf-8" />
@@ -24,17 +24,17 @@
 				</ul>
 				<ul>
 					<li>
-						<a href="yaid-js.html" title="Go SDK">
+						<a href="./yaid-js" title="Javascript SDK">
 							<img alt="Javscript SDK" src="logo-js.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="yaid-py.html" title="Go SDK">
+						<a href="./yaid-py" title="Python SDK">
 							<img alt="Python SDK" src="logo-py.svg" width="30" height="30" />
 						</a>
 					</li>
 					<li>
-						<a href="yaid-go.html" title="Go SDK">
+						<a href="./yaid-go" title="Go SDK">
 							<img alt="Go SDK" src="logo-go.svg" width="30" height="30" />
 						</a>
 					</li>
@@ -125,7 +125,7 @@ A random value or a counter could for example be used.</p>
 			<footer>
 				<br /><br />
 				<hr />
-				<small><i>© 2023 Hans van Leeuwen 3735207
+				<small><i>© 2023 Hans van Leeuwen 6de93b4
 </i></small>
 				<div style="float: right">
 					🌞 <input type="checkbox" role="switch" id="toggleSwitch" /> 🌚
