--- a/site/template.html
+++ b/site/template.html
@@ -40,15 +40,15 @@
 					</li>
 				</ul>
 			</nav>
-			{{main}}
+			<main>{{main}}</main>
 			<footer>
-				<br /><br />
-				<hr />
-				<small><i>© 2023 Hans van Leeuwen {{gitrev}}</i></small>
-				<div style="float: right">
-					🌞 <input type="checkbox" role="switch" id="toggleSwitch" /> 🌚
-				</div>
-				<br /><br />
+				<p>
+					<hr />
+					<small><i>© 2023 Hans van Leeuwen #{{gitrev}}</i></small>
+					<div style="float: right">
+						🌞 <input type="checkbox" role="switch" id="toggleSwitch" /> 🌚
+					</div>
+				</p>
 			</footer>
 		</div>
 	</body>
