--- a/site/app.html
+++ b/site/app.html
@@ -30,4 +30,4 @@
 		</div>
 	</article>
 </div>
-<script type="module" src="script.js"></script>
+<script type="module" src="script.js" async></script>
