--- a/site/template.html
+++ b/site/template.html
@@ -38,6 +38,11 @@
 							<img alt="Go SDK" src="logo-go.svg" width="30" height="30" />
 						</a>
 					</li>
+					<li>
+						<a href="https://github.com/hnz/yaid" title="Github repo">
+							<img alt="Github repo" src="logo-github.svg" width="30" height="30" />
+						</a>
+					</li>
 				</ul>
 			</nav>
 			<main>{{main}}</main>
