--- a/site/template.html
+++ b/site/template.html
@@ -38,17 +38,22 @@
 							<img alt="Go SDK" src="logo-go.svg" width="30" height="30" />
 						</a>
 					</li>
+					<li>
+						<a href="https://github.com/hnz/yaid" title="Github repo">
+							<img alt="Github repo" src="logo-github.svg" width="30" height="30" />
+						</a>
+					</li>
 				</ul>
 			</nav>
-			{{main}}
+			<main>{{main}}</main>
 			<footer>
-				<br /><br />
-				<hr />
-				<small><i>© 2023 Hans van Leeuwen {{gitrev}}</i></small>
-				<div style="float: right">
-					🌞 <input type="checkbox" role="switch" id="toggleSwitch" /> 🌚
-				</div>
-				<br /><br />
+				<p>
+					<hr />
+					<small><i>© 2023 Hans van Leeuwen #{{gitrev}}</i></small>
+					<div style="float: right">
+						🌞 <input type="checkbox" role="switch" id="toggleSwitch" /> 🌚
+					</div>
+				</p>
 			</footer>
 		</div>
 	</body>
